<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/kode_pelanggan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_kodePelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_kode_pelanggan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/nama"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_nama"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/meter_awal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_meterAwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_meter_awal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/meter_akhir"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_meterAkhir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_meter_akhir"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/pemakaian"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_pemakaian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_pemakaian"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/harga_kwh"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_harga_kwh"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/jumlah_bayar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukkan_nominal_pembayaran"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />
        </TableRow>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <Button
                android:id="@+id/btn_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/bg_button"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </TableLayout>
        <TextView
            android:id="@+id/tv_totalPemakaian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/total_pemakaian"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/tv_jumlahbayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/jumlah_bayar"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/tv_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hasil_kategori"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/tv_uangkembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/uang_kembalian"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/tv_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/keterangan"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp">

            <Button
                android:id="@+id/btn_hapus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/bg_button"
                android:text="@string/hapus"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_keluar"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/bg_button"
                android:text="@string/keluar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </TableLayout>
    </TableLayout>
</ScrollView>